Draw Other Objects in UV not work #40423

Closed
opened 2014-05-29 14:48:30 +02:00 by Cenek Strichel · 10 comments

System Information
W8.1 64b, GF770

Blender Version
06a05e4

Short description of error
Draw Other Objects in UV not working when you have setted texture in background.

Exact steps for others to reproduce the error

  1. Open my scene
    bug.png

tst.zip

  1. Select all 3 objects
  2. In UV you are see only one object, but View > Draw Other Objects is enabled.
  3. Disable TST texture by cross in UV
  4. Now it is working.
**System Information** W8.1 64b, GF770 **Blender Version** 06a05e4 **Short description of error** Draw Other Objects in UV not working when you have setted texture in background. **Exact steps for others to reproduce the error** 1) Open my scene ![bug.png](https://archive.blender.org/developer/F91838/bug.png) [tst.zip](https://archive.blender.org/developer/F91840/tst.zip) 2) Select all 3 objects 3) In UV you are see only one object, but View > Draw Other Objects is enabled. 4) Disable TST texture by cross in UV 5) Now it is working.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Campbell Barton self-assigned this 2014-05-29 18:06:02 +02:00

The problem is that cycles uses images differently, but the feature to draw other objects is comparing each faces image.

This patch disables image checking when cycles is used, but I think this isn't so good, probably it should compare materials (or active image node?).

Brecht, have some suggestion?

tmp.diff

The problem is that cycles uses images differently, but the feature to draw other objects is comparing each faces image. This patch disables image checking when cycles is used, but I think this isn't so good, probably it should compare materials (or active image node?). Brecht, have some suggestion? [tmp.diff](https://archive.blender.org/developer/F91855/tmp.diff)
Member

Added subscribers: @brecht, @LukasTonne

Added subscribers: @brecht, @LukasTonne

Added subscriber: @MarcClintDion

Added subscriber: @MarcClintDion

I think comparing materials for Cycles would be ok.

I think comparing materials for Cycles would be ok.

This issue was referenced by a1f8cb6dbb

This issue was referenced by a1f8cb6dbb196026a7c8bf0794959ac7bf372cf7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a1f8cb6dbb.

Closed by commit a1f8cb6dbb.

Note, committed fix that uses ED_object_get_active_image to match painting behavior.

Note, committed fix that uses `ED_object_get_active_image` to match painting behavior.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40423
No description provided.