Fix T40423: UV Editing 'Draw Other Objects' fails with Cycles